# gd32vw55x-wifi

./: BUILD_GUIDE.md  PORTING.md  PORTING_ISSUES.md  README.md  SConscript
inc/: app_cfg.h  config_gdm32.h  platform_def.h
port/: wifi_mem_port.c  wifi_netif_port.c  wifi_rtos_port.c
rom_export/mbedtls-2.17.0-rom/include/mbedtls/: config.h
src/lwip-2.2.0/: CMakeLists.txt
src/lwip-2.2.0/port/: dhcpd.c  lwipopts.h
src/lwip-2.2.0/port/arch/: cc.h
src/lwip-2.2.0/src/apps/altcp_tls/: altcp_tls_mbedtls.c
src/lwip-2.2.0/src/apps/http/: http_client.c
src/lwip-2.2.0/src/apps/mqtt/: mqtt.c  (+1 more)
src/macsw/export/: _build_version.h  mac_types.h  macif_api.h  wlan_config.h
src/macsw/import/: rtos_import.h  wifi_import.h
src/mbedtls/: CMakeLists.txt  README.md  mbedtls_config_rtthread.h
src/mbedtls/mbedtls/: BRANCHES.md
src/plf/riscv/: CMakeLists.txt
src/plf/riscv/env/: gd32vw55x.ld  start.S
src/plf/riscv/gd32vw55x/: gd32vw55x.h  gd32vw55x_it.c
src/plf/src/: CMakeLists.txt  gd32vw55x_platform.c  gd32vw55x_platform.h
src/plf/src/nvds/: README.md  nvds_flash.c
src/plf/src/raw_flash/: raw_flash_api.c
src/plf/src/rf/: hal_rf.h  rf_efuse.h
src/plf/src/uart/: uart.c  uart_config.h
src/rtos/rtos_wrapper/: wrapper_os.h  wrapper_rtthread.c  wrapper_rtthread.h
src/util/include/: cJSON.h
src/util/src/: cJSON.c  debug_print.c
src/wifi_manager/: wifi_init.c  wifi_management.c  wifi_management.h  wifi_netlink.c  wifi_vif.h  wifi_wpa.c  wifi_wpa.h
src/wifi_manager/wpas/: build_config.h  wpas_comm.h  wpas_eapol.h  wpas_ft.h  wpas_includes.h  wpas_intf.h
(+11 files in other folders)
